Updates to templates

--- a/templates/tool_config.html
+++ b/templates/tool_config.html
@@ -16,7 +16,7 @@
             <table>
                 <tr>
                     <td>Tool Name</td>
-                    <td><input name="tool_name" type="text" value="Test Sinatra App"/></td>
+                    <td><input name="tool_name" type="text" value="Test Flask App"/></td>
                 </tr>
                 <tr>
                     <td>Consumer Key</td>
